service.yaml
apiVersion: v1
kind: Service
metadata:
    name: hw-service
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: hello-world
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 80
