ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hw-ingress
  namespace: itrspace
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: minikube
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hw-service
                port:
                  number: 3000
